Update Portfolio UI/UX for All Devices

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             <span>INITIATE CONTACT</span>
                             <i class="fas fa-satellite-dish"></i>
                         </a>
-                        <a href="/Port/Yash_Agarwal_Resume_ATS.docx" class="jarvis-btn" download>
+                        <a href="Port/Yash_Agarwal_Resume_ATS.docx" class="jarvis-btn" download>
                             <span>DOWNLOAD DATA</span>
                             <i class="fas fa-download"></i>
                         </a>
@@ -141,7 +141,9 @@
                 <div class="hero-visual">
                     <div class="jarvis-avatar">
                         <div class="avatar-container">
-                            <img src="Port/images/1-removebg-preview.png" alt="Yash Agarwal" class="avatar-image">
+                            <div class="avatar-placeholder">
+                                <i class="fas fa-user-astronaut"></i>
+                            </div>
                             <div class="avatar-overlay"></div>
                         </div>
                         <div class="holo-rings">
@@ -509,7 +511,10 @@
                     <!-- Featured Project - ManasMitra -->
                     <div class="project-card" data-category="ai">
                         <div class="project-image">
-                            <img src="Port/images/manas.png" alt="ManasMitra AI">
+                            <div class="project-placeholder ai-project">
+                                <i class="fas fa-brain"></i>
+                                <span>AI PLATFORM</span>
+                            </div>
                             <div class="project-overlay">
                                 <div class="project-links">
                                     <a href="https://www.linkedin.com/search/results/all/?heroEntityKey=urn%3Ali%3Aorganization%3A104112688&keywords=Manas%20Mitra&origin=ENTITY_SEARCH_HOME_HISTORY" class="project-link" target="_blank">
@@ -539,7 +544,10 @@
                     <!-- Web Development Projects -->
                     <div class="project-card" data-category="web">
                         <div class="project-image">
-                            <img src="Port/images/HTML.jpg" alt="Interactive Window System">
+                            <div class="project-placeholder web-project">
+                                <i class="fas fa-window-maximize"></i>
+                                <span>INTERACTIVE UI</span>
+                            </div>
                             <div class="project-overlay">
                                 <div class="project-links">
                                     <a href="Port/Menu/HTMLTasks/draggable.html" class="project-link">
@@ -563,7 +571,10 @@
                     
                     <div class="project-card" data-category="web">
                         <div class="project-image">
-                            <img src="Port/images/html5.jpg" alt="Live Code Interpreter">
+                            <div class="project-placeholder web-project">
+                                <i class="fas fa-code"></i>
+                                <span>LIVE EDITOR</span>
+                            </div>
                             <div class="project-overlay">
                                 <div class="project-links">
                                     <a href="Port/Menu/html_live_interpreter.html" class="project-link">
@@ -588,7 +599,10 @@
                     <!-- DevOps Projects -->
                     <div class="project-card" data-category="devops">
                         <div class="project-image">
-                            <img src="Port/images/docker.jpg" alt="Container Management">
+                            <div class="project-placeholder devops-project">
+                                <i class="fab fa-docker"></i>
+                                <span>CONTAINERS</span>
+                            </div>
                             <div class="project-overlay">
                                 <div class="project-links">
                                     <a href="Port/Menu/docker.html" class="project-link">
@@ -613,7 +627,10 @@
                     <!-- AWS Projects -->
                     <div class="project-card" data-category="aws">
                         <div class="project-image">
-                            <img src="Port/images/aws1.jpg" alt="AWS Management">
+                            <div class="project-placeholder aws-project">
+                                <i class="fab fa-aws"></i>
+                                <span>CLOUD CONTROL</span>
+                            </div>
                             <div class="project-overlay">
                                 <div class="project-links">
                                     <a href="Port/Menu/AWSfiles/boto3.html" class="project-link">
@@ -637,7 +654,10 @@
                     
                     <div class="project-card" data-category="ai">
                         <div class="project-image">
-                            <img src="Port/images/aws5.jpg" alt="AI Text Generator">
+                            <div class="project-placeholder ai-project">
+                                <i class="fas fa-robot"></i>
+                                <span>TEXT AI</span>
+                            </div>
                             <div class="project-overlay">
                                 <div class="project-links">
                                     <a href="Port/Menu/gemini.html" class="project-link">
