--- a/auth/signin.html
+++ b/auth/signin.html
@@ -322,7 +322,7 @@
         <div class="auth-header">
             <div class="auth-logo">Y.A</div>
             <h1 class="auth-title">ACCESS CONTROL</h1>
-            <p class="auth-subtitle">Enter credentials to access portfolio system</p>
+            <p class="auth-subtitle">Authentication required to access Yash Agarwal's Portfolio</p>
         </div>
 
         <div class="error-message" id="errorMessage"></div>
