--- a/auth/signup.html
+++ b/auth/signup.html
@@ -357,7 +357,7 @@
         <div class="auth-header">
             <div class="auth-logo">Y.A</div>
             <h1 class="auth-title">USER REGISTRATION</h1>
-            <p class="auth-subtitle">Create new access credentials for portfolio system</p>
+            <p class="auth-subtitle">Create account to access Yash Agarwal's Portfolio</p>
         </div>
 
         <div class="error-message" id="errorMessage"></div>
