--- a/projec.html
+++ b/projec.html
@@ -292,7 +292,10 @@
                 
                 <div class="project-card" data-category="web">
                     <div class="project-image">
-                        <img src="Port/images/HTML.jpg" alt="Interactive Window System">
+                        <div class="project-placeholder web-project">
+                            <i class="fas fa-window-maximize"></i>
+                            <span>INTERACTIVE UI</span>
+                        </div>
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Port/Menu/HTMLTasks/draggable.html" class="project-link">
@@ -316,7 +319,10 @@
 
                 <div class="project-card" data-category="web">
                     <div class="project-image">
-                        <img src="Port/images/html5.jpg" alt="Live Code Interpreter">
+                        <div class="project-placeholder web-project">
+                            <i class="fas fa-code"></i>
+                            <span>LIVE EDITOR</span>
+                        </div>
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Port/Menu/html_live_interpreter.html" class="project-link">
@@ -340,7 +346,10 @@
 
                 <div class="project-card" data-category="web">
                     <div class="project-image">
-                        <img src="Port/images/html4.jpg" alt="Image Processing System">
+                        <div class="project-placeholder web-project">
+                            <i class="fas fa-image"></i>
+                            <span>IMAGE PROCESSOR</span>
+                        </div>
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Port/Menu/HTMLTasks/upload_image.html" class="project-link">
@@ -364,7 +373,10 @@
 
                 <div class="project-card" data-category="web">
                     <div class="project-image">
-                        <img src="Port/images/pq2.jpg" alt="Voice Synthesis">
+                        <div class="project-placeholder web-project">
+                            <i class="fas fa-volume-up"></i>
+                            <span>VOICE SYNTHESIS</span>
+                        </div>
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Port/Menu/HTMLTasks/text_to_speak.html" class="project-link">
@@ -388,7 +400,10 @@
 
                 <div class="project-card" data-category="web">
                     <div class="project-image">
-                        <img src="Port/images/p1.jpg" alt="Camera System">
+                        <div class="project-placeholder web-project">
+                            <i class="fas fa-camera"></i>
+                            <span>CAMERA SYSTEM</span>
+                        </div>
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Port/Menu/js_camera.html" class="project-link">
@@ -412,7 +427,10 @@
 
                 <div class="project-card" data-category="web">
                     <div class="project-image">
-                        <img src="Port/images/html2.jpg" alt="Live Stream">
+                        <div class="project-placeholder web-project">
+                            <i class="fas fa-video"></i>
+                            <span>LIVE STREAM</span>
+                        </div>
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Port/Menu/cam_live.html" class="project-link">
@@ -439,7 +457,10 @@
 
                 <div class="project-card" data-category="web">
                     <div class="project-image">
-                        <img src="Port/images/p6.jpg" alt="Email System">
+                        <div class="project-placeholder web-project">
+                            <i class="fas fa-envelope-bulk"></i>
+                            <span>EMAIL SYSTEM</span>
+                        </div>
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Port/Menu/send_bulk_email.html" class="project-link">
@@ -463,7 +484,10 @@
 
                 <div class="project-card" data-category="web">
                     <div class="project-image">
-                        <img src="Port/images/wp.jpg" alt="WhatsApp Integration">
+                        <div class="project-placeholder web-project">
+                            <i class="fab fa-whatsapp"></i>
+                            <span>WHATSAPP API</span>
+                        </div>
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Port/Menu/whatsapp.html" class="project-link">
@@ -487,7 +511,10 @@
 
                 <div class="project-card" data-category="web">
                     <div class="project-image">
-                        <img src="Port/images/h6.jpg" alt="SMS System">
+                        <div class="project-placeholder web-project">
+                            <i class="fas fa-sms"></i>
+                            <span>SMS PROTOCOL</span>
+                        </div>
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Port/Menu/python_sms.html" class="project-link">
@@ -514,7 +541,10 @@
 
                 <div class="project-card" data-category="ai">
                     <div class="project-image">
-                        <img src="Port/images/manas.png" alt="ManasMitra AI">
+                        <div class="project-placeholder ai-project">
+                            <i class="fas fa-brain"></i>
+                            <span>MANASMITRA AI</span>
+                        </div>
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="https://www.linkedin.com/search/results/all/?heroEntityKey=urn%3Ali%3Aorganization%3A104112688&keywords=Manas%20Mitra&origin=ENTITY_SEARCH_HOME_HISTORY" class="project-link" target="_blank">
@@ -543,7 +573,10 @@
 
                 <div class="project-card" data-category="ai">
                     <div class="project-image">
-                        <img src="Port/images/aws5.jpg" alt="AI Text Generator">
+                        <div class="project-placeholder ai-project">
+                            <i class="fas fa-robot"></i>
+                            <span>TEXT AI ENGINE</span>
+                        </div>
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Port/Menu/gemini.html" class="project-link">
@@ -570,7 +603,10 @@
 
                 <div class="project-card" data-category="devops">
                     <div class="project-image">
-                        <img src="Port/images/docker.jpg" alt="Container Management">
+                        <div class="project-placeholder devops-project">
+                            <i class="fab fa-docker"></i>
+                            <span>CONTAINERS</span>
+                        </div>
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Port/Menu/docker.html" class="project-link">
@@ -594,7 +630,10 @@
 
                 <div class="project-card" data-category="devops">
                     <div class="project-image">
-                        <img src="Port/images/linux.jpg" alt="Linux Terminal">
+                        <div class="project-placeholder devops-project">
+                            <i class="fab fa-linux"></i>
+                            <span>LINUX TERMINAL</span>
+                        </div>
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Port/Menu/linux.html" class="project-link">
@@ -618,7 +657,10 @@
 
                 <div class="project-card" data-category="devops">
                     <div class="project-image">
-                        <img src="Port/images/linuxman.jpg" alt="SSH Controller">
+                        <div class="project-placeholder devops-project">
+                            <i class="fas fa-terminal"></i>
+                            <span>SSH CONTROL</span>
+                        </div>
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Port/Menu/ssh_linux.html" class="project-link">
@@ -645,7 +687,10 @@
 
                 <div class="project-card" data-category="aws">
                     <div class="project-image">
-                        <img src="Port/images/aws1.jpg" alt="AWS Management">
+                        <div class="project-placeholder aws-project">
+                            <i class="fab fa-aws"></i>
+                            <span>AWS CONTROL</span>
+                        </div>
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Port/Menu/AWSfiles/boto3.html" class="project-link">
@@ -669,7 +714,10 @@
 
                 <div class="project-card" data-category="aws">
                     <div class="project-image">
-                        <img src="Port/images/aws2.jpg" alt="IAM Management">
+                        <div class="project-placeholder aws-project">
+                            <i class="fas fa-users-cog"></i>
+                            <span>IAM MATRIX</span>
+                        </div>
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Port/Menu/AWSfiles/create_iam.html" class="project-link">
@@ -693,7 +741,10 @@
 
                 <div class="project-card" data-category="aws">
                     <div class="project-image">
-                        <img src="Port/images/aws3.jpg" alt="DynamoDB">
+                        <div class="project-placeholder aws-project">
+                            <i class="fas fa-database"></i>
+                            <span>DYNAMODB</span>
+                        </div>
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Port/Menu/AWSfiles/dynamocgi.html" class="project-link">
@@ -717,7 +768,10 @@
 
                 <div class="project-card" data-category="aws">
                     <div class="project-image">
-                        <img src="Port/images/aws4.jpg" alt="EC2 Metrics">
+                        <div class="project-placeholder aws-project">
+                            <i class="fas fa-server"></i>
+                            <span>EC2 METRICS</span>
+                        </div>
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Port/Menu/AWSfiles/ec2metrics.html" class="project-link">
@@ -741,7 +795,10 @@
 
                 <div class="project-card" data-category="aws">
                     <div class="project-image">
-                        <img src="Port/images/aws5.jpg" alt="Log Analysis">
+                        <div class="project-placeholder aws-project">
+                            <i class="fas fa-file-alt"></i>
+                            <span>LOG ANALYZER</span>
+                        </div>
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Port/Menu/AWSfiles/get_logs.html" class="project-link">
@@ -765,7 +822,10 @@
 
                 <div class="project-card" data-category="aws">
                     <div class="project-image">
-                        <img src="Port/images/aws6.jpg" alt="S3 Management">
+                        <div class="project-placeholder aws-project">
+                            <i class="fas fa-hdd"></i>
+                            <span>S3 STORAGE</span>
+                        </div>
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Port/Menu/AWSfiles/s3_bucket.html" class="project-link">
@@ -789,7 +849,10 @@
 
                 <div class="project-card" data-category="aws">
                     <div class="project-image">
-                        <img src="Port/images/aws7.jpg" alt="SNS Service">
+                        <div class="project-placeholder aws-project">
+                            <i class="fas fa-bell"></i>
+                            <span>SNS NOTIFICATIONS</span>
+                        </div>
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Port/Menu/AWSfiles/sns.html" class="project-link">
@@ -816,7 +879,10 @@
 
                 <div class="project-card" data-category="web">
                     <div class="project-image">
-                        <img src="Port/images/p5.jpg" alt="Search Engine">
+                        <div class="project-placeholder web-project">
+                            <i class="fas fa-search"></i>
+                            <span>SEARCH ENGINE</span>
+                        </div>
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Port/Menu/google_search.html" class="project-link">
@@ -840,7 +906,10 @@
 
                 <div class="project-card" data-category="web">
                     <div class="project-image">
-                        <img src="Port/images/p4.jpg" alt="Geolocation">
+                        <div class="project-placeholder web-project">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <span>GEOLOCATION</span>
+                        </div>
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Port/Menu/geo_coordinates.html" class="project-link">
@@ -864,7 +933,10 @@
 
                 <div class="project-card" data-category="web">
                     <div class="project-image">
-                        <img src="Port/images/p3.jpg" alt="Volume Control">
+                        <div class="project-placeholder web-project">
+                            <i class="fas fa-volume-up"></i>
+                            <span>AUDIO CONTROL</span>
+                        </div>
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Port/Menu/adj_vol.html" class="project-link">
@@ -888,7 +960,10 @@
 
                 <div class="project-card" data-category="web">
                     <div class="project-image">
-                        <img src="Port/images/h6.jpg" alt="Command Suggestions">
+                        <div class="project-placeholder web-project">
+                            <i class="fas fa-terminal"></i>
+                            <span>CMD INTELLIGENCE</span>
+                        </div>
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="Port/Menu/cmdsuggest.html" class="project-link">
