Add Email and WhatsApp Integration for Contact Form

--- a/index.html
+++ b/index.html
@@ -752,29 +752,33 @@
                     </div>
                     
                     <div class="contact-form">
-                        <form id="contactForm">
+                        <form id="contactForm" class="jarvis-contact-form">
                             <div class="form-row">
                                 <div class="form-group">
                                     <label class="form-label">IDENTITY</label>
-                                    <input type="text" class="form-input" placeholder="Enter your name" required>
+                                    <input type="text" name="name" class="form-input" placeholder="Enter your name" required>
                                 </div>
                                 <div class="form-group">
                                     <label class="form-label">TRANSMISSION ID</label>
-                                    <input type="email" class="form-input" placeholder="Enter your email" required>
+                                    <input type="email" name="email" class="form-input" placeholder="Enter your email" required>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="form-label">MESSAGE HEADER</label>
-                                <input type="text" class="form-input" placeholder="Enter subject" required>
+                                <input type="text" name="subject" class="form-input" placeholder="Enter subject" required>
                             </div>
                             <div class="form-group">
                                 <label class="form-label">DATA PAYLOAD</label>
-                                <textarea class="form-input" rows="6" placeholder="Enter your message" required></textarea>
+                                <textarea name="message" class="form-input" rows="6" placeholder="Enter your message" required></textarea>
                             </div>
-                            <button type="submit" class="jarvis-btn primary">
+                            <button type="submit" class="jarvis-btn primary" id="submitBtn">
+                                <span class="loading-spinner" id="contactSpinner" style="display: none;"></span>
                                 <span>TRANSMIT MESSAGE</span>
                                 <i class="fas fa-paper-plane"></i>
                             </button>
+                            
+                            <!-- Status Messages -->
+                            <div class="form-status" id="formStatus" style="display: none;"></div>
                         </form>
                     </div>
                 </div>
