--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         </nav>
 
         <!-- Hero Section -->
+             <br><br><br><br><br><br>
         <section id="home" class="hero jarvis-section">
             <div class="hero-container">
                 <div class="hero-content">
@@ -820,7 +821,7 @@
     <!-- AI Assistant Panel -->
     <div class="ai-assistant">
         <div class="ai-header">
-            <div class="ai-avatar">J</div>
+            <div class="ai-avatar">--</div>
             <div class="ai-status">
                 <div class="ai-name">YASH</div>
                 <div class="ai-state">ONLINE</div>
